--- a/index.html
+++ b/index.html
@@ -3,68 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>게임 테스트 메인</title>
+    <title>게임 테스트 센터</title>
     <style>
+        :root {
+            --bg-color: #f8f9fa;
+            --card-bg: #ffffff;
+            --primary: #4a90e2;
+        }
         body {
-            font-family: 'Pretendard', sans-serif;
+            font-family: 'Pretendard', -apple-system, sans-serif;
+            background-color: var(--bg-color);
             display: flex;
             justify-content: center;
-            align-items: center;
-            height: 100vh;
+            padding: 50px 20px;
             margin: 0;
-            background-color: #f0f2f5;
         }
         .container {
+            max-width: 600px;
+            width: 100%;
             text-align: center;
-            background: white;
-            padding: 2rem;
-            border-radius: 15px;
-            shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
-        h1 { color: #333; margin-bottom: 2rem; }
-        .menu-list {
-            list-style: none;
-            padding: 0;
-        }
-        .menu-item {
-            margin: 15px 0;
-        }
-        .game-link {
-            display: block;
+        h1 { color: #2d3436; margin-bottom: 40px; }
+        
+        .game-card {
+            background: var(--card-bg);
+            border-radius: 12px;
+            padding: 20px;
+            margin-bottom: 20px;
+            display: flex;
+            align-items: center;
             text-decoration: none;
-            color: white;
-            background-color: #007bff;
-            padding: 15px 30px;
-            border-radius: 8px;
-            transition: transform 0.2s, background-color 0.2s;
-            font-weight: bold;
+            color: inherit;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+            transition: transform 0.2s, box-shadow 0.2s;
+            border: 1px solid #eee;
         }
-        .game-link:hover {
-            background-color: #0056b3;
-            transform: translateY(-3px);
+        .game-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+            border-color: var(--primary);
         }
-        /* 게임별 포인트 컬러 (선택사항) */
-        .shooting { background-color: #e74c3c; }
-        .darkhouse { background-color: #2c3e50; }
-        .free { background-color: #27ae60; }
+        .icon {
+            font-size: 40px;
+            margin-right: 20px;
+            min-width: 60px;
+        }
+        .info {
+            text-align: left;
+        }
+        .info h2 {
+            margin: 0 0 5px 0;
+            font-size: 1.25rem;
+            color: #333;
+        }
+        .info p {
+            margin: 0;
+            color: #666;
+            font-size: 0.95rem;
+            line-height: 1.4;
+        }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <ul class="menu-list">
-        <li class="menu-item">
-            <a href="/pages/21Shooting.html" class="game-link shooting">🎯 사격게임</a>
-        </li>
-        <li class="menu-item">
-            <a href="/pages/DarkHouse.html" class="game-link darkhouse">🏚️ 어둠속의 집</a>
-        </li>
-        <li class="menu-item">
-            <a href="/pages/IWantFree.html" class="game-link free">🕊️ 자유를 찾아서</a>
-        </li>
-    </ul>
+    <h1>🎮 My Game Project</h1>
+
+    <a href="/pages/21Shooting.html" class="game-card">
+        <div class="icon">🎯</div>
+        <div class="info">
+            <h2>사격게임 (21 Shooting)</h2>
+            <p>제한 시간 내에 타겟을 맞추어 높은 점수를 획득하세요. 당신의 순발력을 테스트합니다!</p>
+        </div>
+    </a>
+
+    <a href="/pages/DarkHouse.html" class="game-card">
+        <div class="icon">🏚️</div>
+        <div class="info">
+            <h2>어둠속의 집 (Dark House)</h2>
+            <p>한 치 앞도 보이지 않는 저택에서 단서를 찾아 탈출하세요. 심리적 압박감이 느껴지는 호러 퍼즐 게임입니다.</p>
+        </div>
+    </a>
+
+    <a href="/pages/IWantFree.html" class="game-card">
+        <div class="icon">🕊️</div>
+        <div class="info">
+            <h2>자유를 찾아서 (I Want Free)</h2>
+            <p>장애물을 피해 더 넓은 세상으로 나아가는 여정. 힐링 감성의 횡스크롤 어드벤처 게임입니다.</p>
+        </div>
+    </a>
+
 </div>
 
 </body>
-
 </html>
