--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <div class="container">
     <h1>🎮 My Game Project</h1>
 
-    <a href="/pages/21Shooting.html" class="game-card">
+    <a href="Games/pages/21Shooting.html" class="game-card">
         <div class="icon">🎯</div>
         <div class="info">
             <h2>사격게임 (21 Shooting)</h2>
@@ -77,7 +77,7 @@
         </div>
     </a>
 
-    <a href="/pages/DarkHouse.html" class="game-card">
+    <a href="Games/pages/DarkHouse.html" class="game-card">
         <div class="icon">🏚️</div>
         <div class="info">
             <h2>어둠속의 집 (Dark House)</h2>
@@ -85,7 +85,7 @@
         </div>
     </a>
 
-    <a href="/pages/IWantFree.html" class="game-card">
+    <a href="Games/pages/IWantFree.html" class="game-card">
         <div class="icon">🕊️</div>
         <div class="info">
             <h2>자유를 찾아서 (I Want Free)</h2>
@@ -97,3 +97,4 @@
 
 </body>
 </html>
+
