--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
 <body>
 
 <div class="container">
-    <h1>🎮 My Game Project</h1>
 
     <a href="Games/pages/21Shooting.html" class="game-card">
         <div class="icon">🎯</div>
@@ -93,8 +92,17 @@
         </div>
     </a>
 
+    <a href="Games/pages/QuizGame.html" class="game-card">
+        <div class="icon">🕊️</div>
+        <div class="info">
+            <h2>자유를 찾아서 (I Want Free)</h2>
+            <p>AI 가 생성해주는 퀴즈 게임</p>
+        </div>
+    </a>
+
 </div>
 
 </body>
 </html>
+
 
