--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
 <div class="container">
 
     <a href="Games/pages/21Shooting.html" class="game-card">
-        <div class="icon">🎯</div>
         <div class="info">
             <h2>사격게임 (21 Shooting)</h2>
             <p>제한 시간 내에 타겟을 맞추어 높은 점수를 획득하세요. 당신의 순발력을 테스트합니다!</p>
@@ -77,7 +76,6 @@
     </a>
 
     <a href="Games/pages/DarkHouse.html" class="game-card">
-        <div class="icon">🏚️</div>
         <div class="info">
             <h2>어둠속의 집 (Dark House)</h2>
             <p>한 치 앞도 보이지 않는 저택에서 단서를 찾아 탈출하세요. 심리적 압박감이 느껴지는 호러 퍼즐 게임입니다.</p>
@@ -85,17 +83,24 @@
     </a>
 
     <a href="Games/pages/IWantFree.html" class="game-card">
-        <div class="icon">🕊️</div>
         <div class="info">
             <h2>자유를 찾아서 (I Want Free)</h2>
-            <p>장애물을 피해 더 넓은 세상으로 나아가는 여정. 힐링 감성의 횡스크롤 어드벤처 게임입니다.</p>
+            <p>엄마의 잔소리를 피해 자유를 찾아서 <br>
+                장애물을 피해 더 넓은 세상으로 나아가는 여정. 힐링 감성의 횡스크롤 어드벤처 게임입니다.</p>
         </div>
     </a>
+
+    <a href="Games/pages/Fly21.html" class="game-card">
+        <div class="info">
+            <h2>날아라 결</h2>
+            <p>비행 게임입니다.</p>
+        </div>
+    </a>    
 
     <a href="Games/pages/QuizGame.html" class="game-card">
         <div class="icon">🕊️</div>
         <div class="info">
-            <h2>자유를 찾아서 (I Want Free)</h2>
+            <h2>퀴즈 생성기</h2>
             <p>AI 가 생성해주는 퀴즈 게임</p>
         </div>
     </a>
@@ -104,5 +109,6 @@
 
 </body>
 </html>
+
 
 
