--- a/index.html
+++ b/index.html
@@ -71,29 +71,28 @@
     <a href="Games/pages/21Shooting.html" class="game-card">
         <div class="info">
             <h2>사격게임 (21 Shooting)</h2>
-            <p>제한 시간 내에 타겟을 맞추어 높은 점수를 획득하세요. 당신의 순발력을 테스트합니다!</p>
+            <p>최대 8인까지 즐기는 긴장감 넘치는 저격 액션! 정교한 조준과 줌 기능을 활용해 움직이는 타겟을 맞히고 스테이지별 최고 점수를 기록하세요. 친구들과 실력을 겨루고 명예의 전당에 이름을 올리세요!</p>
         </div>
     </a>
 
     <a href="Games/pages/DarkHouse.html" class="game-card">
         <div class="info">
             <h2>어둠속의 집 (Dark House)</h2>
-            <p>한 치 앞도 보이지 않는 저택에서 단서를 찾아 탈출하세요. 심리적 압박감이 느껴지는 호러 퍼즐 게임입니다.</p>
+            <p>제한된 시 속에서 펼쳐지는 스릴 넘치는 탈출 액션! 손전등 하나에 의지해 어둠을 밝히며, 기괴한 괴물들을 피해 출구를 찾으세요. 스테이지가 거듭될수록 빨라지는 추격자들로부터 끝까지 살아남아 탈출에 성공해야 합니다.</p>
         </div>
     </a>
 
     <a href="Games/pages/IWantFree.html" class="game-card">
         <div class="info">
             <h2>자유를 찾아서 (I Want Free)</h2>
-            <p>엄마의 잔소리를 피해 자유를 찾아서 <br>
-                장애물을 피해 더 넓은 세상으로 나아가는 여정. 힐링 감성의 횡스크롤 어드벤처 게임입니다.</p>
+            <p>엄마의 눈을 피해 자유를 되찾으세요! 집안 곳곳의 장애물을 넘고 아이템을 활용해 들키지 않고 탈출해야 합니다. 각 스테이지마다 펼쳐지는 긴장감 넘치는 잠입과 기발한 퍼즐을 해결하며 진정한 자유를 만끽해보세요!</p>
         </div>
     </a>
 
     <a href="Games/pages/Fly21.html" class="game-card">
         <div class="info">
             <h2>날아라 결</h2>
-            <p>비행 게임입니다.</p>
+            <p>하늘을 나는 짜릿한 비행 액션! 화면을 터치해 고도를 조절하며 다가오는 장애물을 피해 최대한 멀리 날아가세요. 속도가 빨라질수록 높아지는 난이도에 도전하고, 3번의 기회 안에 최고 점수를 경신해보세요!</p>
         </div>
     </a>    
 
@@ -101,7 +100,7 @@
         <div class="icon">🕊️</div>
         <div class="info">
             <h2>퀴즈 생성기</h2>
-            <p>AI 가 생성해주는 퀴즈 게임</p>
+            <p>상식부터 전문 지식까지, 한계를 시험하는 짜릿한 퀴즈 대결! 다양한 분야의 문제들을 빠르게 맞히고 높은 점수를 획득하세요. 매 단계 더 어려워지는 문제를 풀며 당신의 지식을 증명하고 최고의 퀴즈 왕에 도전해보세요!</p>
         </div>
     </a>
 
@@ -109,6 +108,7 @@
 
 </body>
 </html>
+
 
 
 
